all prev names removed

--- a/.env.development
+++ b/.env.development
@@ -2,10 +2,10 @@ NODE_ENV = "development"
 BUILD_TYPE = "development"
 
 # localstorage keys
-USER_STORAGE_KEY = "@gateCo:dev:user"
-WALKTHROUGHT_STORAGE_KEY = "@gateCo:dev:walkthrough"
-USER_IS_FIRST = "@gateCo:dev:user_first"
-USER_TOKEN_STORAGE_KEY = "@gateCo:dev:user_token"
+USER_STORAGE_KEY = "@adoxEcommerce:dev:user"
+WALKTHROUGHT_STORAGE_KEY = "@adoxEcommerce:dev:walkthrough"
+USER_IS_FIRST = "@adoxEcommerce:dev:user_first"
+USER_TOKEN_STORAGE_KEY = "@adoxEcommerce:dev:user_token"
 
 # api url
 BASE_URL = "http://172.105.35.15:4022"
