--- a/.env.production
+++ b/.env.production
@@ -2,10 +2,10 @@ NODE_ENV = "production"
 BUILD_TYPE = "production"
 
 # localstorage keys
-USER_STORAGE_KEY = "@gateCo:user"
-WALKTHROUGHT_STORAGE_KEY = "@gateCo:walkthrough"
-USER_IS_FIRST = "@gateCo:user_first"
-USER_TOKEN_STORAGE_KEY="@gateCo:user_token"
+USER_STORAGE_KEY = "@adoxEcommerce:user"
+WALKTHROUGHT_STORAGE_KEY = "@adoxEcommerce:walkthrough"
+USER_IS_FIRST = "@adoxEcommerce:user_first"
+USER_TOKEN_STORAGE_KEY="@adoxEcommerce:user_token"
 
 # api url
 BASE_URL = "http://172.105.35.15:4022"
