--- a/.env.staging
+++ b/.env.staging
@@ -2,10 +2,10 @@ NODE_ENV = "staging"
 BUILD_TYPE = "staging"
 
 # localstorage keys
-USER_STORAGE_KEY = "@gateCo:sta:user"
-WALKTHROUGHT_STORAGE_KEY = "@gateCo:sta:walkthrough"
-USER_IS_FIRST = "@gateCo:sta:user_first"
-USER_TOKEN_STORAGE_KEY="@gateCo:sta:user_token"
+USER_STORAGE_KEY = "@adoxEcommerce:sta:user"
+WALKTHROUGHT_STORAGE_KEY = "@adoxEcommerce:sta:walkthrough"
+USER_IS_FIRST = "@adoxEcommerce:sta:user_first"
+USER_TOKEN_STORAGE_KEY="@adoxEcommerce:sta:user_token"
 
 # api url
 BASE_URL = "http://172.105.35.15:4022"
