--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,9 +43,9 @@ hermesEnabled=true
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
 
-MYAPP_UPLOAD_STORE_FILE=gateco.keystore
-MYAPP_UPLOAD_KEY_ALIAS=gateco
-MYAPP_UPLOAD_STORE_PASSWORD=gateco$2026
-MYAPP_UPLOAD_KEY_PASSWORD=gateco$2026
+MYAPP_UPLOAD_STORE_FILE=adoxEcommerce.keystore
+MYAPP_UPLOAD_KEY_ALIAS=adoxEcommerce
+MYAPP_UPLOAD_STORE_PASSWORD=adoxEcommerce$2026
+MYAPP_UPLOAD_KEY_PASSWORD=adoxEcommerce$2026
 
-# Is CN=Gateco, OU=Gateco, O=Gateco, L=Calicut, ST=Kerala, C=IN correct?
+# Is CN=adoxEcommerce, OU=adoxEcommerce, O=adoxEcommerce, L=Calicut, ST=Kerala, C=IN correct?
