--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,7 +14,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'Gateco' do
+target 'AdoxEcommerce' do
   config = use_native_modules!
   use_frameworks! :linkage => :static
 
