--- a/ios/AdoxEcommerce/Info.plist
+++ b/ios/AdoxEcommerce/Info.plist
@@ -74,7 +74,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>We need access to your camera to take shop board photos</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>We need access to save photos to your library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
@@ -87,6 +87,7 @@
 		<string>Inter-Medium.ttf</string>
 		<string>Inter-Regular.ttf</string>
 		<string>Inter-SemiBold.ttf</string>
+
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
